@@ -1,6 +1,11 @@
 New in spot 2.8.5.dev (not yet released)
 
-  Nothing yet.
+  Bugs fixed:
+
+  - degeneralize_tba() was incorrectly not honnoring the "skip_level"
+    optimization after creating an accepting transition; as a
+    consequence, some correct output could be larger than necessary
+    (but still correct).
 
 New in spot 2.8.5 (2020-01-04)
 
